<?xml version="1.0"?>
<package>
  <name>augmented_whycon</name>
  <version>0.0.0</version>
  <description>The augmented_whycon package</description>

  <maintainer email="kevin.chappellet@lirmm.fr">Kevin Chappellet</maintainer>
  <license>LGPLv3</license>

  <url type="repository">https://github.com/chappk/augmented_whycon</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
