<?xml version="1.0"?>
<package>
  <name>whycon_lshape</name>
  <version>0.0.0</version>
  <description>L shape detection using WhyCon markers</description>

  <author email="pfeifferkai@gmx.de">Kai Pfeiffer</author>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>LGPLv3</license>

  <url type="repository">https://gite.lirmm.fr/kai_pfeiffer_at_gmx_de/whyconLshape</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
